# democreate

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  README.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  pyproject.toml  tasks.yaml
.github/workflows/: ci.yml
data/: AGENTS.md  README.md  benchmarks.json  claim_ledger.yaml
docs/: AGENTS.md  README.md  api.md  architecture.md  audio.md  backends.md  cli.md  config.md  gallery.md  paper.md  provenance.md  quickstart.md  recipes.md  schema.md  testing_philosophy.md  translation.md  troubleshooting.md  video.md  videos.md
docs/_gallery/: make_gallery.py
examples/: AGENTS.md  README.md  democreate_intro.json  democreate_paper_showcase.json  democreate_showcase.json  make_assets.py  make_intro_demo.py  make_paper_showcase.py  make_showcase.py
manuscript/: 00_abstract.md  01_introduction.md  02_architecture.md  03_synchronization.md  04_implementation.md  05_composition_and_configurability.md  06_research_paper_demos.md  07_evaluation.md  08_reproducibility.md  09_scope_and_related_work.md  10_provenance_and_distribution.md  AGENTS.md  README.md  SYNTAX.md  config.yaml  preamble.md  references.bib
manuscript/figures/: graphical_abstract.py  make_figures.py
output/captions/: democreate-the-showcase-audio_en-subs_en.srt  democreate-the-showcase-audio_en-subs_en.vtt  democreate-the-showcase-audio_en-subs_es.srt  democreate-the-showcase-audio_en-subs_es.vtt  democreate-the-showcase-audio_en-subs_ru.srt  democreate-the-showcase-audio_en-subs_ru.vtt  democreate-the-showcase-audio_es-subs_en.srt  democreate-the-showcase-audio_es-subs_en.vtt  democreate-the-showcase-audio_ru-subs_ru.srt  democreate-the-showcase-audio_ru-subs_ru.vtt  democreate-the-showcase-subs_en.srt  democreate-the-showcase-subs_en.vtt  democreate-the-showcase-subs_es.srt  democreate-the-showcase-subs_es.vtt  democreate-the-showcase-subs_ru.srt  democreate-the-showcase-subs_ru.vtt
output/chapters/: youtube_chapters.txt
output/paper_demo/chapters/: youtube_chapters.txt
output/paper_demo/web/: player.html
output/paper_showcase/chapters/: youtube_chapters.txt
output/paper_showcase/web/: player.html
output/web/: player.html
scripts/: 00_preflight.py  README.md  benchmark.py  build_manuscript.py  generate_api_docs.py  generate_demo.py  generate_portfolio.py
src/democreate/: __init__.py  _logging.py  cli.py  config.py  errors.py  media.py  pipeline.py  portfolio.py  project_paths.py  schema.py
src/democreate/animation/: AGENTS.md  README.md  __init__.py  diagram.py  fonts.py  highlights.py  manim_scenes.py  waveform.py  zoom.py
src/democreate/assembly/: AGENTS.md  README.md  __init__.py  animator.py  audio.py  captions.py  compositor.py  (+1 more)
tests/: conftest.py  test_animation_diagram.py  test_animation_highlights.py  test_animation_manim.py  test_animation_waveform.py  test_assembly_audio.py  test_assembly_captions.py  test_assembly_compositor_extra.py  test_capture_browser.py  test_claim_ledger.py  test_cli.py  test_cli_commands.py  test_codebase_dependency.py  test_codebase_walker.py  test_composition.py  test_config.py  test_export_formats.py  test_export_poster.py  test_export_video.py  test_foundation.py  test_manuscript_consistency.py  test_media.py  test_motion_and_export.py  test_narration_project_summary.py  test_narration_script.py  test_narration_sync.py  test_narration_tts.py  test_nocrop_layout.py  test_output_public_allowlist.py  test_paper_extract.py  test_paper_script.py  test_paper_structure.py  test_pipeline.py  test_portfolio.py  test_provenance_v06.py  test_redteam_fixes.py  test_render_integration.py  test_scene_context_and_player.py  test_schema.py  test_scripts_smoke.py  (+3 more)
tests/animation/: test_zoom.py
tests/assembly/: test_compositor.py  test_compositor_extra.py  test_effects.py
tests/capture/: test_replay.py  test_screen.py  test_terminal.py
tests/codebase/: test_ast_viz.py  test_dependency.py  test_walker.py
tests/export/: test_chapters.py  test_interactive.py  test_metadata.py  test_overlay.py  test_stego.py  test_verify.py
tests/narration/: test_llm.py  test_project_summary.py  test_tts.py  test_tts_elevenlabs.py  test_tts_kokoro.py
tests/paper/: test_pdf.py
tests/translation/: test_translator.py
(+46 files in other folders)
