[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "democreate"
version = "0.6.2"
description = "Declarative, deterministic audio-visual demo generation for codebases, websites, and terminals — a virtual-IDE action stream with TTS→STT synchronization and pluggable capture/render backends."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniel Ari Friedman" }]
keywords = [
    "demo-generation",
    "screencast",
    "text-to-speech",
    "code-walkthrough",
    "video",
    "narration",
    "whisper",
    "manim",
    "playwright",
    "reproducible",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Documentation",
]

# Core dependencies are deliberately light and pure-Python-friendly so that the
# deterministic default backends produce a real demo end-to-end with no heavy
# binaries (ffmpeg, torch, chrome) required.
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
# Optional media backends. Each upgrades a subsystem from its deterministic
# default to real capture/synthesis where that adapter is wired. Install only
# what you need.
tts = ["kokoro-onnx>=0.3.0", "soundfile>=0.12.0", "numpy>=1.24.0"]
whisper = ["openai-whisper>=20231117"]
capture = ["mss>=9.0.0", "numpy>=1.24.0"]
browser = ["playwright>=1.40.0"]
animation = ["manim>=0.18.0"]
replay = ["pynput>=1.7.0", "pyautogui>=0.9.54"]
video = ["moviepy>=1.0.3", "ffmpeg-python>=0.2.0"]
codebase = ["tree-sitter>=0.21.0", "tree-sitter-languages>=1.10.0"]
# pdf: richer PDF extraction. The default paper workflow uses the poppler CLI
# (pdfinfo/pdftotext/pdftoppm) with no pip dependency; pymupdf is an upgrade.
pdf = ["pymupdf>=1.24.0"]
all = [
    "kokoro-onnx>=0.3.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "openai-whisper>=20231117",
    "mss>=9.0.0",
    "playwright>=1.40.0",
    "manim>=0.18.0",
    "pynput>=1.7.0",
    "pyautogui>=0.9.54",
    "moviepy>=1.0.3",
    "ffmpeg-python>=0.2.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0",
    "pymupdf>=1.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
democreate = "democreate.cli:app"

[project.urls]
Homepage = "https://github.com/docxology/democreate"
Repository = "https://github.com/docxology/democreate"

[tool.setuptools.packages.find]
where = ["src"]
include = ["democreate*"]

[tool.setuptools.package-data]
democreate = ["py.typed", "export/templates/*.html.j2"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "backend: tests that exercise an optional heavy backend (skipped if absent)",
]

[tool.coverage.run]
source = ["src/democreate"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
    "*/test_*.py",
]

[tool.coverage.report]
# ≥90% on the pure-Python core is the enforced gate. Thin adapters to heavy
# backends are excluded via `pragma: no cover` where they cannot run in CI.
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# E501: long lines tolerated. B008: typer's Argument/Option-in-defaults is the
# library's required idiom, not a bug.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
